--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.eig</groupId>
-        <artifactId>eig-parent</artifactId>
+        <groupId>de.cismet.cids</groupId>
+        <artifactId>cids-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>net.eig.ws.util</groupId>
+    <groupId>de.cismet.commons</groupId>
     <artifactId>wss-bean</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
