--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>de.cismet.commons</groupId>
     <artifactId>wss-bean</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-uba-20150109</version>
     <packaging>jar</packaging>
 
     <name>WSS Bean</name>
