--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- 
+        FIXME: Replace deprecated cids-parent by cismet-parent
+    -->
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>2.4</version>
+        <version>5.0-SNAPSHOT</version>
     </parent>
 
     <groupId>de.cismet.commons</groupId>
@@ -14,43 +17,28 @@
     <packaging>jar</packaging>
 
     <name>WSS Bean</name>
-    <description>!!! description pending !!!</description>
-    <licenses>
-        <license>
-            <name>GNU Lesser General Public License</name>
-            <distribution>repo</distribution>
-            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
-        </license>
-    </licenses>
-
-    <prerequisites>
-        <maven>3</maven>
-    </prerequisites>
-
+    <description>wss-bean is a tool to access secured (map) services.</description>
+    
     <scm>
         <connection>https://github.com/cismet/wss-bean.git</connection>
         <developerConnection>scm:git:git@github.com:cismet/wss-bean.git</developerConnection>
         <url>https://github.com/cismet/wss-bean</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
-    <repositories>
-        <repository>
-            <id>cismet-repo</id>
-            <url>https://repo.cismet.de/repo</url>
-            <releases>
-                <enabled>true</enabled>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>daily</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>interval:60</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
+    <ciManagement>
+        <system>jenkins</system>
+        <url>https://ci.cismet.de/job/wss-bean/</url>
+    </ciManagement>
+    
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/cismet/wss-bean/issues</url>
+    </issueManagement>  
 
+    <!-- 
+        TODO define versions in dependency management section of ext-libs-bom 
+    -->
     <dependencies>
         <dependency>
             <groupId>log4j</groupId>
@@ -66,6 +54,15 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
+        </dependency>
+        <!--
+            Temporarily add used undeclared dependencies
+            enforcer.BannedDependencies: Found Banned Dependency: commons-logging:commons-logging:jar:1.0.4
+        -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.0.4</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
